ONOS role up-to-date